--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Un aspecto muy importante es que solo se muestren los comentarios de la tarea se
 Asegúrense también de probar que todo funcione correctamente y que los comentarios se guarden y se puedan ver sin problemas. Este tipo de atención al detalle es lo que hace que una aplicación sea verdaderamente funcional y atractiva para el usuario."</td>
             </tr>
             <tr>
-                <td><strong>PASO 3 (15 minutos):</strong> Proyectar Diapositiva 15 "Cronómetro - 15 Minutos".</td>
+                <td><strong>PASO 3 (15 minutos):</strong> Proyectar Diapositiva 15 "Cronómetro".</td>
                 <td><strong>DIÁLOGO SUGERIDO:</strong> "N/A"</td>
             </tr>
             <tr>
